# better-software-of-you

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONCEPTS.md  LAST_SESSION.md  README.md  context-engineering-manifesto.md  findings.md  idea.prd  install.sh  output  progress.md  task_plan.md  this-is-software-of-you.md
.claude-plugin/: plugin.json
mcp-server/: CEO_PROMPT.md  README.md  install.sh  pyproject.toml
mcp-server/src/software_of_you/: __init__.py  __main__.py  cli.py  db.py  google_auth.py  google_sync.py  license.py  server.py  slack_auth.py  slack_sync.py
mcp-server/src/software_of_you/migrations/: 004_gmail_module.sql  005_calendar_module.sql  013_user_profiles.sql  014_computed_views.sql  016_multi_account_views.sql  018_health_checks.sql  018_slack_views.sql
mcp-server/src/software_of_you/templates/: base.html  nav.html
mcp-server/src/software_of_you/templates/components/: empty_state.html  stat_card.html  status_badge.html
mcp-server/src/software_of_you/tools/: _resolve.py  _validate.py  calendar_tool.py  contacts.py  decisions.py  email_tool.py  inbox_tool.py  intelligence.py  interactions.py  journal_tool.py  notes_tool.py  overview.py  profile.py  projects.py  search_tool.py  semantic_search_tool.py  slack_tool.py  system.py  transcripts.py  views.py
mcp-server/tests/: conftest.py  test_backup_restore.py  test_day_rounding.py  test_db.py  test_input_validation.py  test_license.py  test_metrics.py  test_migrations.py  test_review_followups.py  test_smoke.py  test_sync_resilience.py  test_transcript_robustness.py  test_views_escaping.py
(+312 files in other folders)
