[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "software-of-you"
version = "0.1.0"
description = "Personal data platform — your contacts, projects, emails, and meetings in one local database, accessible through Claude."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Kerry Morrison" }]
keywords = ["mcp", "personal-data", "crm", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=1.2.0",
    "jinja2>=3.1",
]

[project.scripts]
software-of-you = "software_of_you.cli:main"

[project.urls]
Homepage = "https://github.com/kerrymorrison/software-of-you"

[tool.hatch.build.targets.wheel]
packages = ["src/software_of_you"]
